css/styles.css
/* ... */
.we-do-h3 {
  font-size: 35px;
  line-height: 1.2em;
  letter-spacing: 0.03em;
  margin-bottom: 50px;
  text-align: center;
}

.we-do-ul {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: -30px;
  margin-left: -30px;
  justify-content: space-between;
}

.we-do-li {
  list-style-type: none;
  /* margin-bottom: 30px;
  margin-left: 30px; */
  margin: 0;
  position: relative;
}

.button2:hover {
  color: white;
  background-color: #2196f3;
  cursor: pointer;
}

footer {
  background-color: #2f303a;
  color: white;
}

.hrefBottomColor {
  color: rgba(255, 255, 255, 0.6);
}

.hrefTopColorRight {
  color: #757575;
}

.contact-color-right {
  color: #757575;
}

.our-team-section {
  background-color: #f5f4fa;
}

.second-color-up {
  color: black;
}

.secondColorDown {
  color: white;
}

li {
  list-style-type: none;
  display: inline-block;
}

p {
  word-wrap: break-word;
}

.container {
  max-width: 1200px;
  margin: 0 auto;
  /* padding: 0 15px; */
}

.section {
  padding: 94px 0;
}

.button-div-center {
  text-align: center;
}

header {
  border-bottom: 1px solid #ececec;
}

.team-li {
  display: flex;
  flex-direction: column;
  align-content: center;
  background-color: #fff;
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
    0px 2px 1px rgba(0, 0, 0, 0.2);
  border-radius: 0px 0px 4px 4px;
/* margin-left: 30px;
  margin-bottom: 30px; */
  margin: 0;
}

.team-ul {
  list-style-type: none;
  display: flex;
  flex-wrap: wrap;
  margin-left: -30px;
  margin-bottom: -30px;
  justify-content: space-between;
}
.team-li figcaption {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 30px;
}

.team-h3 {
  font-size: 35px;
  line-height: 1.2em;
  letter-spacing: 0.03em;
  margin-bottom: 50px;
  text-align: center;
}

.imgteam {
  width: 270px;
  height: 260px;
}

.Teambox {
  background: #ffffff;
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
    0px 2px 1px rgba(0, 0, 0, 0.2);
  border-radius: 0px 0px 4px 4px;
  width: 270px;
  height: 368px;
}

.aNav {
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 16px;
  letter-spacing: 0.02em;
  display: flex;
  align-items: center;
}

.header-contact-ul {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  list-style: none;
  margin-left: -50px;
}

.header-contact-li {
  margin-left: 50px;
}

.banerText {
  font-style: normal;
  font-weight: 900;
  font-size: 44px;
  line-height: 60px;
  text-align: center;
  letter-spacing: 0.06em;
  text-transform: uppercase;
}

.banner-img {
  /* max-width: 1600px; */
  height: 600px;
  padding: 200px 0;
  background-image: linear-gradient(
      rgba(47, 48, 58, 0.4),
      rgba(47, 48, 58, 0.4)
    ),
    url('../images/banner.jpg');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  margin: 0 auto;
}

.portfolio-button-ul {
  display: flex;
  justify-content: center;
  list-style-type: none;
  flex-wrap: wrap;
  margin-left: -8px;
  margin-bottom: -8px;
  padding-bottom: 50px;
  justify-content: center;
}
.portfolio-description-popup {
  position: absolute; 
  top: 0;
  left: 0;
  color: #fff;
  background-color: #2196f3e5;
  padding: 49px 24px;
  font-weight: 400;
  font-size: 18px;
  line-height: 1.56em;
  letter-spacing: 0.03em;
  transform: translatey(100%);
  opacity: 0;
}
.portfolio-li:hover .portfolio-description-popup,
.pportfolio-li:active .portfolio-description-popup,
.portfolio-li:focus .portfolio-description-popup {
  transform: translatey(0);
  opacity: 100;
}


.portfolio-button-li {
   /* margin-left: 8px;
  margin-bottom: 8px; */
  margin: 0;
  width: 114px;
  height: 38px;
  background: #f5f4fa;
  text-align: center;
  border-radius: 4px;
}
.button2:hover {
  color: white;
  background-color: #2196f3;
  width: 114px;
  height: 38px;
  cursor: pointer;
}

.portfolioButton {
  width: 93px;
  height: 38px;
  background: #f5f4fa;
  border-radius: 4px;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 26px;
  text-align: center;
  letter-spacing: 0.03em;
  color: #212121;
  border: none;
}

.portfolio-img {
  display: block;
  position: relative;
}

.portfolio-ul {
  display: flex;
  flex-wrap: wrap;
  list-style-type: none;
  margin-left: -30px;
  margin-bottom: -30px;
  justify-content: space-between;
}

.portfolio-h4 {
  font-size: 18px;
  line-height: 2;
  letter-spacing: 0.06em;
  padding: 20px 24px 4px 24px;
}

.portfolio-p {
  padding: 0px 24px 20px 24px;
  line-height: 1.875em;
  color: #757575;
}

.portfolio-figcaption {
  border-right: 1px solid #eeeeee;
  border-bottom: 1px solid #eeeeee;
  border-left: 1px solid #eeeeee;
  background-color: #ffffff;
  
}

.portfolio-li {
  max-width: 370px;
  /* margin-left: 30px;
  margin-bottom: 30px; */
  background-color: #fff;
}
.portfolio-li:hover,
.portfolio-li:focus {
  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
}

.clients-h2 {
  font-weight: 700;
  font-size: 36px;
  line-height: 1.2em;
  letter-spacing: 0.03em;
  margin-bottom: 50px;
  text-align: center;
}

.clients-ul {
  list-style-type: none;
  display: flex;
  flex-wrap: wrap;
  margin-left: -30px;
  margin-bottom: -30px;
}

.clients-a {
  display: flex;
  justify-content: center;
  height: 92px;
  min-width: 170px;
  border: 1px solid #afb1b8;
  border-radius: 4px;
  margin-left: 30px;
  margin-bottom: 30px;
  cursor: pointer;
  color: #afb1b8;
}

.clients-a-icon {
  display: flex;
  align-self: center;
  --clients-list-item-icon-color: currentcolor;
}

.clients-a .company01 {
  width: 41px;
  height: 48px;
}

.clients-a .company02 {
  width: 40px;
  height: 53px;
}
.clients-a .company04 {
  width: 85px;
  height: 42px;
}

.clients-a .company03 {
  width: 45px;
  height: 42px;
}

.clients-a .company06 {
  width: 94px;
  height: 45px;
}
.clients-a .company05 {
  width: 63px;
  height: 47px;
}
/* ... */

